syntax = "proto3";
package pb;

//%s/uint32\(\s\+\)error/ErrCode error/g

//let i=0 | g/\(\d\{5}\)/s//\=i/ |let i=i+1

enum ErrCode {
    OK                     =  0; //正常
    NotEnoughDiamond       =  1; //钻石不足
    NotEnoughCoin          =  2; //金币不足
    NotInRoom              =  3; //你不在房间,针对房间的一切操作无效
    UsernameOrPwdError     =  4; //用户名或者密码错误
    PhoneNumberError       =  5; //不是手机号码
    LoginError             =  6; //登录失败
    UsernameEmpty          =  7; //用户名为空
    NameTooLong            =  8; //取名太长了
    PhoneNumberEnpty       =  9; //电话号码为空
    PwdEmpty               = 10; //密码为空
    PwdFormatError         = 11; //验证只能由数字字母下划线组成的5-17位密码字符串
    PhoneRegisted          = 12; //手机已经注册
    RegistError            = 13; //注册失败
    UserDataNotExist       = 14; //用户数据不存在
    WechatLoingFailReAuth  = 15; //微信登录失败，请重新授权
    GetWechatUserInfoFail  = 16; //获取微信用户数据失败
    PayOrderFail           = 17; //支付下单失败
    PayOrderError          = 18; //支付订单错误
    RoomNotExist           = 19; //房间不存在
    RoomFull               = 20; //房间已满
    CreateRoomFail         = 21; //创建房间失败
    OperateError           = 22; //错误操作,不能进行该操作
    NiuCardError           = 23; //提交的牌错误
    NiuValueError          = 24; //提交的牛错误
    BetValueError          = 25; //提交的下注错误
    GameStarted            = 26; //游戏已经开始
    NotInRoomCannotLeave   = 27; //不在房间，没有离开房间这一说
    GameStartedCannotLeave = 28; //正在牌局中不能离开
    StartedNotKick         = 29; //已经开始游戏不能踢人
    RunningNotVote         = 30; //牌局已经开始不能投票
    VotingCantLaunchVote   = 31; //房间里已经有玩家发起投票了
    NotVoteTime            = 32; //先有人发起才能投票
    NotInPrivateRoom       = 33; //玩家不在私人房间
    OtherLoginThisAccount  = 34; //您的帐号在其它地方登录
    BeDealerNotEnough      = 35; //上庄金币不足
    SitNotEnough           = 36; //坐下金币不足20000
    SitDownFailed          = 37; //坐下失败,位置已经有人
    BetDealerFailed        = 38; //庄家不能下注
    BetNotSeat             = 39; //没有坐下不能下注
    BetTopLimit            = 40; //下注最高限制
    GameNotStart           = 41; //游戏未开始
    StandUpFailed          = 42; //站起失败,不在位置内
    DealerSitFailed        = 43; //庄家不能坐下
    BeDealerAlreadySit     = 44; //已经坐下不能上庄
    BeDealerAlready        = 45; //已经在上庄列表中
    DepositNumberError     = 46; //存款金额错误
    DrawMoneyNumberError   = 47; //取款金额错误,最低10个
    GiveNumberError        = 48; //赠送金额错误,最低10个
    GiveUseridError        = 49; //赠送对象错误,id存在
    GiveTooMuch            = 50; //赠送过多，改日再赠送
    NotBankrupt            = 51; //没有破产
    NotRelieves            = 52; //当日救济次数不足，请充值
    NotPrizeDraw           = 53; //当日抽奖次数不足，请充值
    NotGotPrizeDraw        = 54; //没有抽到奖励,或抽奖出错
    BoxNotYet              = 55; //时间未到不能领取
    NotBox                 = 56; //没有宝箱或全部领取完成
    NotTimes               = 57; //次数错误
    AppleOrderFail         = 58; //苹果支付下单失败
    MatchClassicFail       = 59; //匹配房间失败
    EnterClassicNotEnough  = 60; //金币不足，请选择低倍场
    NotWinning             = 61; //没有中奖
    AlreadyWinning         = 62; //已经领取中奖
    NotVip                 = 63; //不是vip用户
    NotVipTimes            = 64; //vip次数已用完
    AlreadyInRoom          = 65; //已经在房间内
    NotYourTurn            = 66; //错误操作,不能进行该操作
    ErrorOperateValue      = 67; //错误操作值
    Failed                 = 68; //错误
    RepeatLogin            = 69; //重复登录
    VipTooLow              = 70; //vip等级不够
    ChipNotEnough          = 71; //chip不够
    BetSeatWrong           = 72; //不能下注庄家位置,下注位置错误
    NotDealerRoom          = 73; //不是上庄房间
    SmsCodeEmpty           = 74; //验证码为空
    SmsCodeWrong           = 75; //验证码错误
    SmsCodeExpired         = 76; //验证码过期
    ResetPwdFaild          = 77; //重置失败
    PhoneNotRegist         = 78; //手机没有注册
    TouristInoperable      = 79; //游客不能操作
    SafetycodeEmpty        = 80; //安全码为空
    SafetycodeNotExist     = 81; //安全码不存在
    DealerDownFail         = 82; //下庄失败
    MatchFail              = 83; //匹配房间失败
    EnterFail              = 84; //进入房间失败
    NotReady               = 85; //没有准备不能操作
    AlreadyFold            = 86; //已经放弃
    AlreadyAllin           = 87; //已经allin
    CallError              = 88; //跟注错误
    RaiseError             = 89; //加注错误
    AlreadyAward           = 90; //已经领取奖励
    AwardFaild             = 91; //领取奖励失败
    AlreadyPrize           = 92; //已经领取奖励
    PwdError               = 93; //密码错误
    BankNotOpen            = 94; //没有开通银行
    BankAlreadyOpen        = 95; //已经开通银行
    AlreadySitDown         = 96; //已经在位置上
}

enum SitType {
    SitDown = 0;//坐下
    SitUp = 1;//站起
}
